<resources>
    <string name="app_name">Sudoku Solver created by: Aviv Lugasi</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>

    <string name="Solve">Solve</string>
    <string name="Solving">Solving</string>
    <string name="RevelAll">Reveal All</string>
    <string name="Clear">Clear</string>
</resources>