<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <com.sudokusolverapp.myapplication.SudokuBoard
        android:id="@+id/SudokuBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        custom:boardColor="#000000"
        custom:cellFillColor="#6600DDFF"
        custom:cellsHighlightColor="#2600DDFF"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:letterColor="#000000"
        custom:letterColorHidden="#334DDF"
        custom:letterColorSolve="#2ED635">

    </com.sudokusolverapp.myapplication.SudokuBoard>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.0"
        custom:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNOnePress"
            android:text="@string/One"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNTwoPress"
            android:text="@string/Two"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNThreePress"
            android:text="@string/Three"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFourPress"
            android:text="@string/Four"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFivePress"
            android:text="@string/Five"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSixPress"
            android:text="@string/Six"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSevenPress"
            android:text="@string/Seven"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNEightPress"
            android:text="@string/Eight"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNNinePress"
            android:text="@string/Nine"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/solveBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/solve_btn"
        android:onClick="Solve"
        android:text="@string/Solve"
        android:textSize="24sp"
        custom:layout_constraintBottom_toTopOf="@+id/linearLayout"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.498"
        custom:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inValidText"
        style="@android:style/Widget.EditText"
        android:layout_width="487dp"
        android:layout_height="66dp"
        android:background="#00000000"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="Invalid Sudoku"
        android:textColor="#D60808"
        android:textSize="24sp"

        android:visibility="invisible"
        custom:layout_constraintBottom_toTopOf="@+id/solveBtn"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/SudokuBoard"
        custom:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>